--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Vincedream <callmevincehua@gmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Vincedream/ts-pack"
   },
   "license": "MIT",
   "engines": {
